# ChangeLog for dev-perl/Geo-IP
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Geo-IP/ChangeLog,v 1.38 2008/01/13 21:28:43 dertobi123 Exp $

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> Geo-IP-1.28.ebuild:
  ppc. stable

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Geo-IP-1.28.ebuild:
  amd64 stable

  09 Oct 2007; Raúl Porcel <armin76@gentoo.org> Geo-IP-1.28.ebuild:
  alpha/ia64/sparc/x86 stable

  07 Sep 2007; Jeroen Roovers <jer@gentoo.org> Geo-IP-1.28.ebuild:
  Marked ~hppa (bug #191525).

*Geo-IP-1.28 (07 Jul 2007)

  07 Jul 2007; Michael Cummings <mcummings@gentoo.org> +Geo-IP-1.28.ebuild:
  Version bump

  31 Mar 2007; Marcelo Goes <vanquirius@gentoo.org> -Geo-IP-1.25.ebuild,
  Geo-IP-1.27.ebuild:
  Remove old ebuild, do not set RDEPEND=DEPEND.

  01 Feb 2007; Markus Ullmann <jokey@gentoo.org> Geo-IP-1.27.ebuild:
  stable on x86

  01 Feb 2007; Markus Ullmann <jokey@gentoo.org> Geo-IP-1.25.ebuild,
  Geo-IP-1.27.ebuild:
  ebuild cleanup

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org> Geo-IP-1.27.ebuild:
  ppc stable

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> Geo-IP-1.27.ebuild:
  Stable on Alpha.

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> Geo-IP-1.27.ebuild:
  Stable on ia64.

  09 Oct 2006; Michael Cummings <mcummings@gentoo.org> -Geo-IP-1.23.ebuild,
  Geo-IP-1.25.ebuild, Geo-IP-1.27.ebuild:
  Keywording sparc, amd64; cleaning out stale ebuild

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org> Geo-IP-1.23.ebuild,
  Geo-IP-1.25.ebuild, Geo-IP-1.27.ebuild:
  Adding perl dep; fixed DEPEND

  04 Jul 2006; Christian Hartmann <ian@gentoo.org> Geo-IP-1.23.ebuild,
  Geo-IP-1.25.ebuild, Geo-IP-1.27.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed header

  28 May 2006; Bryan Østergaard <kloeri@gentoo.org> Geo-IP-1.25.ebuild:
  Stable on alpha.

  25 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> Geo-IP-1.27.ebuild:
  Add ~x86-fbsd keyword.
