@@ -1,6 +1,9 @@
 # ChangeLog for net-www/awstats
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/awstats/Attic/ChangeLog,v 1.55 2008/02/02 21:18:18 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/awstats/Attic/ChangeLog,v 1.56 2008/02/04 02:53:14 jer Exp $
+
+  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> awstats-6.7-r2.ebuild:
+  Stable for HPPA (bug #208615).
 
   02 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
   awstats-6.7-r2.ebuild:
