@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Geo-IP
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Geo-IP/ChangeLog,v 1.38 2008/01/13 21:28:43 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Geo-IP/ChangeLog,v 1.39 2008/02/04 02:51:46 jer Exp $
+
+  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> Geo-IP-1.28.ebuild:
+  Stable for HPPA (bug #208615).
 
   13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> Geo-IP-1.28.ebuild:
   ppc. stable
